# golem_navigation

./: CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  golem_amcl.yaml  move_base.yaml
launch/: golem_amcl.launch  golem_gmapping.launch  golem_navigation.launch
resources/: lab_413.pgm  lab_413.yaml  lab_413_places.yaml  vel_params.yaml
scripts/: follow_node.py  goal_parser_script.py  swapper_client.py  swapper_node.py
src/: battery_inspector.cpp  battery_inspector_node.cpp  door_checker.cpp  door_checker_node.cpp  pose_sender.cpp  pose_sender_node.cpp
