<?xml version="1.0"?>
<package>
  <name>golem_navigation</name>
  <version>0.0.1</version>
  <description>The golem_navigation package</description>
  <maintainer email="raulpl25@gmail.com">Raul Peralta Lozada</maintainer>
  <license>MIT</license>
  <author email="raulpl25@gmail.com">Raul Peralta Lozada</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>json_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>json_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>